--- a/gene/src/main/resources/reports/invoice.jrxml
+++ b/gene/src/main/resources/reports/invoice.jrxml
@@ -5,10 +5,10 @@
 	<parameter name="Date" class="java.lang.String"/>
 	<parameter name="CustomerName" class="java.lang.String"/>
 	<query language="sql"><![CDATA[]]></query>
-	<field name="itemName" class="java.lang.String"/>
-	<field name="quantity" class="java.lang.Integer"/>
-	<field name="price" class="java.lang.Double"/>
-	<field name="total" class="java.lang.Double"/>
+	<field name="Item" class="java.lang.String"/>
+	<field name="Quantity" class="java.lang.Integer"/>
+	<field name="Price" class="java.lang.Double"/>
+	<field name="Total" class="java.lang.Double"/>
 	<background splitType="Stretch"/>
 	<title height="89" splitType="Stretch">
 		<element kind="staticText" uuid="77ab05e2-1ad9-4a7f-b4f9-cb46d784af67" x="-20" y="-20" width="595" height="30" fontSize="20.0" bold="true" hTextAlign="Center">
@@ -31,31 +31,31 @@ Date: ]]></text>
 	<pageHeader height="35" splitType="Stretch"/>
 	<columnHeader height="63" splitType="Stretch">
 		<element kind="staticText" uuid="43fc2a68-76cd-477a-a27c-5f9651ca3f74" x="0" y="15" width="100" height="30" fontSize="15.0" bold="true">
-			<text><![CDATA[itemName]]></text>
+			<text><![CDATA[Item]]></text>
 		</element>
 		<element kind="staticText" uuid="6a77b363-f885-4a77-bdbb-8fca73a844fc" x="110" y="15" width="100" height="30" fontSize="15.0" bold="true">
-			<text><![CDATA[quantity]]></text>
+			<text><![CDATA[Quantity]]></text>
 		</element>
 		<element kind="staticText" uuid="ac22c03c-a398-4a34-a8ba-1e6a4e9f3df2" x="233" y="16" width="100" height="30" fontSize="15.0" bold="true">
-			<text><![CDATA[price]]></text>
+			<text><![CDATA[Price]]></text>
 		</element>
 		<element kind="staticText" uuid="380f6e32-188f-422c-80be-3c3eff255fbd" x="358" y="15" width="100" height="30" fontSize="15.0" bold="true">
-			<text><![CDATA[total:]]></text>
+			<text><![CDATA[Total:]]></text>
 		</element>
 	</columnHeader>
 	<detail>
 		<band height="125" splitType="Stretch">
 			<element kind="textField" uuid="a78205bf-4b15-4fe3-95cf-f133f8fb781b" x="0" y="0" width="100" height="30" fontSize="14.0">
-				<expression><![CDATA[$F{itemName}]]></expression>
+				<expression><![CDATA[$F{Item}]]></expression>
 			</element>
 			<element kind="textField" uuid="d40349d1-7819-4da1-b611-43e86bb7ec38" x="110" y="0" width="100" height="30" fontSize="14.0">
-				<expression><![CDATA[$F{quantity}]]></expression>
+				<expression><![CDATA[$F{Quantity}]]></expression>
 			</element>
 			<element kind="textField" uuid="8871c8a3-23b3-44c5-9fb9-604e21d20fc5" x="233" y="0" width="100" height="30" fontSize="14.0">
-				<expression><![CDATA[$F{price}]]></expression>
+				<expression><![CDATA[$F{Price}]]></expression>
 			</element>
 			<element kind="textField" uuid="22b251c7-3365-45a4-99d5-9d670ea606a4" x="358" y="0" width="100" height="30" fontSize="14.0">
-				<expression><![CDATA[$F{total}]]></expression>
+				<expression><![CDATA[$F{Total}]]></expression>
 			</element>
 		</band>
 	</detail>
